--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,91 @@
-/* You can add global styles to this file, and also import other style files */
+html, body, div, span, applet, object,iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+html {height: 100%;}
+body {
+  height: inherit;
+  font: 14px/18px "Times New Roman", Times, sans-serif;
+  background-color: #FFF;
+}
+
+*{
+  margin: 0;
+  padding: 0;
+  outline: none;
+
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+a, a:hover {text-decoration: none;}
+
+.clearFix:before,
+.clearFix:after {
+  content: " ";
+  display: table;
+}
+
+.clearFix:after {clear: both;}
+
+.left {float: left;}
+.right {float: right;}
+
+/* Application-wide Styles */
+h1 {
+  color: #369;
+  font-family: Arial, Helvetica, sans-serif;
+}
+h2, h3 {
+  color: #444;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+}
+body, input[type="text"], button {
+  color: #333;
+  font-family: Cambria, Georgia, serif;
+}
+/* everywhere else */
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+button {
+  padding:10px 10px;
+  border-radius: 5px;
+  border:3px solid rgba(181,31,31,0.65);
+  box-shadow:1px 1px 3px 1px rgba(64,60,67,0.16);
+}
+button:active{
+  background-color:rgba(240,235,84,0.8);
+}
+button:hover{
+  box-shadow:0 0 3px 1px rgba(64,60,67,0.36);
+  background-color:rgba(240,235,84,1);
+  transform:scale(1.1,1.1);
+}
+button,
+button:active{
+  box-shadow:none;
+  transform:scale(0.9,0.9);
+}
+
+
+
